# server/pkg/answer/v1alpha1/answer.pb.go
@@ -1,0 +1,266 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.27.1
+// 	protoc        (unknown)
+// source: answer/v1alpha1/answer.proto
+
+package answersv1alpha1
+
+import (
+	v1alpha1 "github.com/castlemilk/qanda/server/pkg/api/v1alpha1"
+	v1alpha11 "github.com/castlemilk/qanda/server/pkg/author/v1alpha1"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	_ "google.golang.org/protobuf/types/known/timestamppb"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Answer struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Metadata *v1alpha1.Metadata `protobuf:"bytes,1,opt,name=metadata,proto3" json:"metadata,omitempty"`
+	Author   *v1alpha11.Author  `protobuf:"bytes,2,opt,name=author,proto3" json:"author,omitempty"`
+	Spec     *AnswerSpec        `protobuf:"bytes,3,opt,name=spec,proto3" json:"spec,omitempty"`
+}
+
+func (x *Answer) Reset() {
+	*x = Answer{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_answer_v1alpha1_answer_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Answer) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Answer) ProtoMessage() {}
+
+func (x *Answer) ProtoReflect() protoreflect.Message {
+	mi := &file_answer_v1alpha1_answer_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Answer.ProtoReflect.Descriptor instead.
+func (*Answer) Descriptor() ([]byte, []int) {
+	return file_answer_v1alpha1_answer_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Answer) GetMetadata() *v1alpha1.Metadata {
+	if x != nil {
+		return x.Metadata
+	}
+	return nil
+}
+
+func (x *Answer) GetAuthor() *v1alpha11.Author {
+	if x != nil {
+		return x.Author
+	}
+	return nil
+}
+
+func (x *Answer) GetSpec() *AnswerSpec {
+	if x != nil {
+		return x.Spec
+	}
+	return nil
+}
+
+type AnswerSpec struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Content *v1alpha1.Content `protobuf:"bytes,1,opt,name=content,proto3" json:"content,omitempty"`
+	Tags    []*v1alpha1.Tag   `protobuf:"bytes,2,rep,name=tags,proto3" json:"tags,omitempty"`
+}
+
+func (x *AnswerSpec) Reset() {
+	*x = AnswerSpec{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_answer_v1alpha1_answer_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *AnswerSpec) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AnswerSpec) ProtoMessage() {}
+
+func (x *AnswerSpec) ProtoReflect() protoreflect.Message {
+	mi := &file_answer_v1alpha1_answer_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AnswerSpec.ProtoReflect.Descriptor instead.
+func (*AnswerSpec) Descriptor() ([]byte, []int) {
+	return file_answer_v1alpha1_answer_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *AnswerSpec) GetContent() *v1alpha1.Content {
+	if x != nil {
+		return x.Content
+	}
+	return nil
+}
+
+func (x *AnswerSpec) GetTags() []*v1alpha1.Tag {
+	if x != nil {
+		return x.Tags
+	}
+	return nil
+}
+
+var File_answer_v1alpha1_answer_proto protoreflect.FileDescriptor
+
+var file_answer_v1alpha1_answer_proto_rawDesc = []byte{
+	0x0a, 0x1c, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61,
+	0x31, 0x2f, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x10,
+	0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31,
+	0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
+	0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74,
+	0x6f, 0x1a, 0x1b, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2f,
+	0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x16,
+	0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2f, 0x74, 0x61, 0x67,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x1a, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x61, 0x6c,
+	0x70, 0x68, 0x61, 0x31, 0x2f, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x1a, 0x1c, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70,
+	0x68, 0x61, 0x31, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x22, 0x9f, 0x01, 0x0a, 0x06, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x12, 0x32, 0x0a, 0x08, 0x6d,
+	0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x16, 0x2e,
+	0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2e, 0x4d, 0x65, 0x74,
+	0x61, 0x64, 0x61, 0x74, 0x61, 0x52, 0x08, 0x6d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x12,
+	0x2f, 0x0a, 0x06, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b, 0x32,
+	0x17, 0x2e, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61,
+	0x31, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x52, 0x06, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72,
+	0x12, 0x30, 0x0a, 0x04, 0x73, 0x70, 0x65, 0x63, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1c,
+	0x2e, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61,
+	0x31, 0x2e, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x53, 0x70, 0x65, 0x63, 0x52, 0x04, 0x73, 0x70,
+	0x65, 0x63, 0x22, 0x64, 0x0a, 0x0a, 0x41, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x53, 0x70, 0x65, 0x63,
+	0x12, 0x2f, 0x0a, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x0b, 0x32, 0x15, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31,
+	0x2e, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x52, 0x07, 0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e,
+	0x74, 0x12, 0x25, 0x0a, 0x04, 0x74, 0x61, 0x67, 0x73, 0x18, 0x02, 0x20, 0x03, 0x28, 0x0b, 0x32,
+	0x11, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2e, 0x54,
+	0x61, 0x67, 0x52, 0x04, 0x74, 0x61, 0x67, 0x73, 0x42, 0x49, 0x5a, 0x47, 0x67, 0x69, 0x74, 0x68,
+	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x61, 0x73, 0x74, 0x6c, 0x65, 0x6d, 0x69, 0x6c,
+	0x6b, 0x2f, 0x71, 0x61, 0x6e, 0x64, 0x61, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70,
+	0x6b, 0x67, 0x2f, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70,
+	0x68, 0x61, 0x31, 0x3b, 0x61, 0x6e, 0x73, 0x77, 0x65, 0x72, 0x73, 0x76, 0x31, 0x61, 0x6c, 0x70,
+	0x68, 0x61, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_answer_v1alpha1_answer_proto_rawDescOnce sync.Once
+	file_answer_v1alpha1_answer_proto_rawDescData = file_answer_v1alpha1_answer_proto_rawDesc
+)
+
+func file_answer_v1alpha1_answer_proto_rawDescGZIP() []byte {
+	file_answer_v1alpha1_answer_proto_rawDescOnce.Do(func() {
+		file_answer_v1alpha1_answer_proto_rawDescData = protoimpl.X.CompressGZIP(file_answer_v1alpha1_answer_proto_rawDescData)
+	})
+	return file_answer_v1alpha1_answer_proto_rawDescData
+}
+
+var file_answer_v1alpha1_answer_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_answer_v1alpha1_answer_proto_goTypes = []interface{}{
+	(*Answer)(nil),            // 0: answers.v1alpha1.Answer
+	(*AnswerSpec)(nil),        // 1: answers.v1alpha1.AnswerSpec
+	(*v1alpha1.Metadata)(nil), // 2: api.v1alpha1.Metadata
+	(*v1alpha11.Author)(nil),  // 3: author.v1alpha1.Author
+	(*v1alpha1.Content)(nil),  // 4: api.v1alpha1.Content
+	(*v1alpha1.Tag)(nil),      // 5: api.v1alpha1.Tag
+}
+var file_answer_v1alpha1_answer_proto_depIdxs = []int32{
+	2, // 0: answers.v1alpha1.Answer.metadata:type_name -> api.v1alpha1.Metadata
+	3, // 1: answers.v1alpha1.Answer.author:type_name -> author.v1alpha1.Author
+	1, // 2: answers.v1alpha1.Answer.spec:type_name -> answers.v1alpha1.AnswerSpec
+	4, // 3: answers.v1alpha1.AnswerSpec.content:type_name -> api.v1alpha1.Content
+	5, // 4: answers.v1alpha1.AnswerSpec.tags:type_name -> api.v1alpha1.Tag
+	5, // [5:5] is the sub-list for method output_type
+	5, // [5:5] is the sub-list for method input_type
+	5, // [5:5] is the sub-list for extension type_name
+	5, // [5:5] is the sub-list for extension extendee
+	0, // [0:5] is the sub-list for field type_name
+}
+
+func init() { file_answer_v1alpha1_answer_proto_init() }
+func file_answer_v1alpha1_answer_proto_init() {
+	if File_answer_v1alpha1_answer_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_answer_v1alpha1_answer_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Answer); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_answer_v1alpha1_answer_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*AnswerSpec); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_answer_v1alpha1_answer_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_answer_v1alpha1_answer_proto_goTypes,
+		DependencyIndexes: file_answer_v1alpha1_answer_proto_depIdxs,
+		MessageInfos:      file_answer_v1alpha1_answer_proto_msgTypes,
+	}.Build()
+	File_answer_v1alpha1_answer_proto = out.File
+	file_answer_v1alpha1_answer_proto_rawDesc = nil
+	file_answer_v1alpha1_answer_proto_goTypes = nil
+	file_answer_v1alpha1_answer_proto_depIdxs = nil
+}
